--- a/源码/secondhand-main/vue/package.json
+++ b/源码/secondhand-main/vue/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.13",
     "echarts": "^5.6.0",
     "element-ui": "^2.15.14",
     "vue": "^2.6.14",
