--- a/源码/secondhand-main/springboot/pom.xml
+++ b/源码/secondhand-main/springboot/pom.xml
@@ -87,6 +87,17 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>group.springframework.ai</groupId>
+            <artifactId>spring-ai-ollama-spring-boot-starter</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.83</version>
+        </dependency>
 
     </dependencies>
 
